Created database SampleFakerData

--- a/SQL_connection.ipynb
+++ b/SQL_connection.ipynb
@@ -51,55 +51,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from dbuserdata import userdata as ud\n",
-    "# user=ud.user\n",
-    "# password=ud.password\n",
-    "# host=ud.host\n",
-    "# port=ud.port\n",
-    "# database=ud.database\n",
-    "# print(user,password,host,port,database)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sqlalchemy import create_engine,text\n",
-    "engine_script=\"mysql+mysqlconnector://root:root@localhost:3306/mytaildb01\"\n",
+    "engine_script=\"mysql+mysqlconnector://root:root@localhost:3306/EDA_Assignment_5\"\n",
     "engine = create_engine(engine_script,echo=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Query List\n",
+    "create_table_query = \"\"\"Create table if not exists SampleFakerData (\n",
+    "                                customer_id int, \n",
+    "                                customer_name varchar(30),\n",
+    "                                product_id int,\n",
+    "                                purchase_date datetime,\n",
+    "                                quantity int,\n",
+    "                                price_per_unit float,\n",
+    "                                region varchar(20)\n",
+    "                                )\"\"\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-11-27 19:15:45,307 INFO sqlalchemy.engine.Engine SELECT DATABASE()\n",
-      "2024-11-27 19:15:45,307 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2024-11-27 19:15:45,310 INFO sqlalchemy.engine.Engine SELECT @@sql_mode\n",
-      "2024-11-27 19:15:45,311 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2024-11-27 19:15:45,314 INFO sqlalchemy.engine.Engine SELECT @@lower_case_table_names\n",
-      "2024-11-27 19:15:45,315 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2024-11-27 19:15:45,318 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
-      "2024-11-27 19:15:45,319 INFO sqlalchemy.engine.Engine Create table trail (id int, name varchar(20))\n",
-      "2024-11-27 19:15:45,320 INFO sqlalchemy.engine.Engine [generated in 0.00166s] {}\n",
-      "2024-11-27 19:15:45,423 INFO sqlalchemy.engine.Engine ROLLBACK\n"
+      "2024-11-27 20:29:19,061 INFO sqlalchemy.engine.Engine SELECT DATABASE()\n",
+      "2024-11-27 20:29:19,062 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2024-11-27 20:29:19,064 INFO sqlalchemy.engine.Engine SELECT @@sql_mode\n",
+      "2024-11-27 20:29:19,065 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2024-11-27 20:29:19,067 INFO sqlalchemy.engine.Engine SELECT @@lower_case_table_names\n",
+      "2024-11-27 20:29:19,068 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2024-11-27 20:29:19,070 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2024-11-27 20:29:19,070 INFO sqlalchemy.engine.Engine Create table if not exists SampleFakerData (\n",
+      "                                customer_id int, \n",
+      "                                customer_name varchar(30),\n",
+      "                                product_id int,\n",
+      "                                purchase_date datetime,\n",
+      "                                quantity int,\n",
+      "                                price_per_unit float,\n",
+      "                                region varchar(20)\n",
+      "                                )\n",
+      "2024-11-27 20:29:19,071 INFO sqlalchemy.engine.Engine [generated in 0.00138s] {}\n",
+      "2024-11-27 20:29:19,096 INFO sqlalchemy.engine.Engine ROLLBACK\n"
      ]
     }
    ],
    "source": [
     "with engine.connect() as conn:\n",
-    "    conn.execute(text(\"Create table trail (id int, name varchar(20))\"))"
+    "    conn.execute(text(create_table_query))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from GeneratingData import "
    ]
   }
  ],
