--- a/SQL_connection.ipynb
+++ b/SQL_connection.ipynb
@@ -100,19 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "from faker import Faker\n",
-    "import random as rn\n",
+    "import random\n",
     "\n",
     "fake=Faker()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,21 +142,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-11-27 20:29:19,061 INFO sqlalchemy.engine.Engine SELECT DATABASE()\n",
-      "2024-11-27 20:29:19,062 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2024-11-27 20:29:19,064 INFO sqlalchemy.engine.Engine SELECT @@sql_mode\n",
-      "2024-11-27 20:29:19,065 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2024-11-27 20:29:19,067 INFO sqlalchemy.engine.Engine SELECT @@lower_case_table_names\n",
-      "2024-11-27 20:29:19,068 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2024-11-27 20:29:19,070 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
-      "2024-11-27 20:29:19,070 INFO sqlalchemy.engine.Engine Create table if not exists SampleFakerData (\n",
+      "2024-11-27 22:14:10,745 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2024-11-27 22:14:10,747 INFO sqlalchemy.engine.Engine Create table if not exists SampleFakerData (\n",
       "                                customer_id int, \n",
       "                                customer_name varchar(30),\n",
       "                                product_id int,\n",
@@ -165,8 +159,8 @@
       "                                price_per_unit float,\n",
       "                                region varchar(20)\n",
       "                                )\n",
-      "2024-11-27 20:29:19,071 INFO sqlalchemy.engine.Engine [generated in 0.00138s] {}\n",
-      "2024-11-27 20:29:19,096 INFO sqlalchemy.engine.Engine ROLLBACK\n"
+      "2024-11-27 22:14:10,748 INFO sqlalchemy.engine.Engine [cached since 64.5s ago] {}\n",
+      "2024-11-27 22:14:10,786 INFO sqlalchemy.engine.Engine ROLLBACK\n"
      ]
     }
    ],
@@ -177,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,44 +180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_rows=200\n",
-    "region_list=[\"North\",\"South\",\"East\",\"West\"]"
+    "region_list=[\"North\",\"South\",\"East\",\"West\"]\n",
+    "# region=[random.choice(region_list) for _ in range(num_rows)]\n",
+    "# print(region)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "All arrays must be of the same length",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[63], line 11\u001b[0m\n\u001b[0;32m      1\u001b[0m data\u001b[38;5;241m=\u001b[39m{\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcustomer_id\u001b[39m\u001b[38;5;124m'\u001b[39m:[\u001b[38;5;28mid\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m \u001b[38;5;28mid\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1000\u001b[39m,\u001b[38;5;241m1201\u001b[39m)],\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcustomer_name\u001b[39m\u001b[38;5;124m'\u001b[39m : [fake\u001b[38;5;241m.\u001b[39mname() \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_rows)],  \u001b[38;5;66;03m# _ indicates throwaway variable\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mregion\u001b[39m\u001b[38;5;124m'\u001b[39m : [rn\u001b[38;5;241m.\u001b[39mchoice([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNorth\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSouth\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEast\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWest\u001b[39m\u001b[38;5;124m\"\u001b[39m]) \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_rows)]\n\u001b[0;32m      9\u001b[0m }\n\u001b[1;32m---> 11\u001b[0m FakerData_df\u001b[38;5;241m=\u001b[39m\u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\core\\frame.py:778\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    772\u001b[0m     mgr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_init_mgr(\n\u001b[0;32m    773\u001b[0m         data, axes\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m: index, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolumns\u001b[39m\u001b[38;5;124m\"\u001b[39m: columns}, dtype\u001b[38;5;241m=\u001b[39mdtype, copy\u001b[38;5;241m=\u001b[39mcopy\n\u001b[0;32m    774\u001b[0m     )\n\u001b[0;32m    776\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, \u001b[38;5;28mdict\u001b[39m):\n\u001b[0;32m    777\u001b[0m     \u001b[38;5;66;03m# GH#38939 de facto copy defaults to False only in non-dict cases\u001b[39;00m\n\u001b[1;32m--> 778\u001b[0m     mgr \u001b[38;5;241m=\u001b[39m \u001b[43mdict_to_mgr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtyp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmanager\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    779\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, ma\u001b[38;5;241m.\u001b[39mMaskedArray):\n\u001b[0;32m    780\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mma\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mrecords\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\core\\internals\\construction.py:503\u001b[0m, in \u001b[0;36mdict_to_mgr\u001b[1;34m(data, index, columns, dtype, typ, copy)\u001b[0m\n\u001b[0;32m    499\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    500\u001b[0m         \u001b[38;5;66;03m# dtype check to exclude e.g. range objects, scalars\u001b[39;00m\n\u001b[0;32m    501\u001b[0m         arrays \u001b[38;5;241m=\u001b[39m [x\u001b[38;5;241m.\u001b[39mcopy() \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(x, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m arrays]\n\u001b[1;32m--> 503\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43marrays_to_mgr\u001b[49m\u001b[43m(\u001b[49m\u001b[43marrays\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtyp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtyp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconsolidate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\core\\internals\\construction.py:114\u001b[0m, in \u001b[0;36marrays_to_mgr\u001b[1;34m(arrays, columns, index, dtype, verify_integrity, typ, consolidate)\u001b[0m\n\u001b[0;32m    111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m verify_integrity:\n\u001b[0;32m    112\u001b[0m     \u001b[38;5;66;03m# figure out the index, if necessary\u001b[39;00m\n\u001b[0;32m    113\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 114\u001b[0m         index \u001b[38;5;241m=\u001b[39m \u001b[43m_extract_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43marrays\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    115\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    116\u001b[0m         index \u001b[38;5;241m=\u001b[39m ensure_index(index)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\core\\internals\\construction.py:677\u001b[0m, in \u001b[0;36m_extract_index\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    675\u001b[0m lengths \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(raw_lengths))\n\u001b[0;32m    676\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(lengths) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m--> 677\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAll arrays must be of the same length\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    679\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m have_dicts:\n\u001b[0;32m    680\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    681\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMixing dicts with non-Series may lead to ambiguous ordering.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    682\u001b[0m     )\n",
-      "\u001b[1;31mValueError\u001b[0m: All arrays must be of the same length"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data={\n",
-    "    'customer_id':[id for id in range(1000,1201)],\n",
+    "    'customer_id':[id for id in range(1000,1200)],\n",
     "    'customer_name' : [fake.name() for _ in range(num_rows)],  # _ indicates throwaway variable\n",
-    "    'product_id' : [rn.randint(1,20) for _ in range(num_rows)],\n",
+    "    'product_id' : [random.randint(1,20) for _ in range(num_rows)],\n",
     "    'purchase_date' : [fake.date_between(start_date=\"-1y\",end_date=\"today\") for _ in range(num_rows)], # date_between helps generate fake data from today to past 1 year\n",
-    "    'quantity' : [rn.randint(1,10) for _ in range(num_rows)],\n",
-    "    'price_per_unit' : [round(rn.uniform(10.0,100.0),2) for _ in range(num_rows)],\n",
-    "    'region' : [rn.choice([\"North\",\"South\",\"East\",\"West\"]) for _ in range(num_rows)]\n",
+    "    'quantity' : [random.randint(1,10) for _ in range(num_rows)],\n",
+    "    'price_per_unit' : [round(random.uniform(10.0,100.0),2) for _ in range(num_rows)],\n",
+    "    'region' : [random.choice(region_list) for _ in range(num_rows)]\n",
     "}\n",
     "\n",
     "FakerData_df=pd.DataFrame(data)"
@@ -231,10 +211,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-11-27 22:15:54,920 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2024-11-27 22:15:54,925 INFO sqlalchemy.engine.Engine DESCRIBE `eda_assignment_5`.`SampleFakerData2`\n",
+      "2024-11-27 22:15:54,927 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2024-11-27 22:15:54,935 INFO sqlalchemy.engine.Engine \n",
+      "CREATE TABLE `SampleFakerData2` (\n",
+      "\tcustomer_id BIGINT, \n",
+      "\tcustomer_name TEXT, \n",
+      "\tproduct_id BIGINT, \n",
+      "\tpurchase_date DATE, \n",
+      "\tquantity BIGINT, \n",
+      "\tprice_per_unit FLOAT(53), \n",
+      "\tregion TEXT\n",
+      ")\n",
+      "\n",
+      "\n",
+      "2024-11-27 22:15:54,939 INFO sqlalchemy.engine.Engine [no key 0.00439s] {}\n",
+      "2024-11-27 22:15:54,984 INFO sqlalchemy.engine.Engine INSERT INTO `SampleFakerData2` (customer_id, customer_name, product_id, purchase_date, quantity, price_per_unit, region) VALUES (%(customer_id)s, %(customer_name)s, %(product_id)s, %(purchase_date)s, %(quantity)s, %(price_per_unit)s, %(region)s)\n",
+      "2024-11-27 22:15:54,985 INFO sqlalchemy.engine.Engine [generated in 0.00379s] [{'customer_id': 1000, 'customer_name': 'Rachael Anderson', 'product_id': 19, 'purchase_date': datetime.date(2024, 9, 22), 'quantity': 10, 'price_per_unit': 24.92, 'region': 'South'}, {'customer_id': 1001, 'customer_name': 'Andrew Arnold', 'product_id': 4, 'purchase_date': datetime.date(2023, 12, 16), 'quantity': 3, 'price_per_unit': 58.41, 'region': 'East'}, {'customer_id': 1002, 'customer_name': 'Jason Andersen', 'product_id': 4, 'purchase_date': datetime.date(2024, 7, 1), 'quantity': 7, 'price_per_unit': 99.57, 'region': 'South'}, {'customer_id': 1003, 'customer_name': 'Joanne Collins', 'product_id': 18, 'purchase_date': datetime.date(2024, 6, 20), 'quantity': 5, 'price_per_unit': 31.95, 'region': 'North'}, {'customer_id': 1004, 'customer_name': 'Cristian Cross', 'product_id': 19, 'purchase_date': datetime.date(2024, 8, 2), 'quantity': 4, 'price_per_unit': 69.11, 'region': 'East'}, {'customer_id': 1005, 'customer_name': 'Brittany Sanchez', 'product_id': 4, 'purchase_date': datetime.date(2024, 3, 7), 'quantity': 7, 'price_per_unit': 20.81, 'region': 'West'}, {'customer_id': 1006, 'customer_name': 'Anthony Wilson', 'product_id': 3, 'purchase_date': datetime.date(2024, 2, 3), 'quantity': 4, 'price_per_unit': 34.6, 'region': 'West'}, {'customer_id': 1007, 'customer_name': 'William Richardson', 'product_id': 4, 'purchase_date': datetime.date(2024, 3, 24), 'quantity': 2, 'price_per_unit': 35.01, 'region': 'West'}  ... displaying 10 of 200 total bound parameter sets ...  {'customer_id': 1198, 'customer_name': 'Caleb Baker', 'product_id': 17, 'purchase_date': datetime.date(2024, 9, 21), 'quantity': 6, 'price_per_unit': 88.88, 'region': 'East'}, {'customer_id': 1199, 'customer_name': 'Laurie Nash', 'product_id': 6, 'purchase_date': datetime.date(2024, 5, 20), 'quantity': 8, 'price_per_unit': 28.48, 'region': 'East'}]\n",
+      "2024-11-27 22:15:55,009 INFO sqlalchemy.engine.Engine SHOW FULL TABLES FROM `eda_assignment_5`\n",
+      "2024-11-27 22:15:55,011 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2024-11-27 22:15:55,015 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "Data transferred successfully to MySQL\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\anura\\AppData\\Local\\Temp\\ipykernel_17124\\1072947547.py:2: UserWarning: The provided table name 'SampleFakerData2' is not found exactly as such in the database after writing the table, possibly due to case sensitivity issues. Consider using lower case table names.\n",
+      "  FakerData_df.to_sql('SampleFakerData2',con=engine,if_exists='replace',index=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pushing data to SQL Database\n",
+    "FakerData_df.to_sql('SampleFakerData2',con=engine,if_exists='replace',index=False)\n",
+    "print(\"Data transferred successfully to MySQL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Closing connection\n",
+    "engine.dispose()"
+   ]
   }
  ],
  "metadata": {
