--- a/RetrieveFromDB.ipynb
+++ b/RetrieveFromDB.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -145,13 +145,280 @@
        "4           69.11   East  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Faker_retrieved_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EDA Tasks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>price_per_unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>200.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.430000</td>\n",
+       "      <td>53.205100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.894302</td>\n",
+       "      <td>26.357942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>11.370000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>29.790000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.500000</td>\n",
+       "      <td>51.380000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>75.402500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>99.570000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         quantity  price_per_unit\n",
+       "count  200.000000      200.000000\n",
+       "mean     5.430000       53.205100\n",
+       "std      2.894302       26.357942\n",
+       "min      1.000000       11.370000\n",
+       "25%      3.000000       29.790000\n",
+       "50%      5.500000       51.380000\n",
+       "75%      8.000000       75.402500\n",
+       "max     10.000000       99.570000"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Summary Statistics\n",
+    "\n",
+    "Faker_retrieved_df[['quantity','price_per_unit']].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>East</th>\n",
+       "      <td>11998.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>North</th>\n",
+       "      <td>14851.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>South</th>\n",
+       "      <td>16068.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>West</th>\n",
+       "      <td>14853.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           sales\n",
+       "region          \n",
+       "East    11998.45\n",
+       "North   14851.02\n",
+       "South   16068.33\n",
+       "West    14853.50"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sales per Region\n",
+    "\n",
+    "Faker_retrieved_df['sales']=Faker_retrieved_df['quantity']*Faker_retrieved_df['price_per_unit']\n",
+    "Total_Sales_byRegion_df=Faker_retrieved_df[['sales']].groupby(Faker_retrieved_df['region']).sum()\n",
+    "Total_Sales_byRegion_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>customer_name</th>\n",
+       "      <th>sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>1150</td>\n",
+       "      <td>Douglas Ramirez</td>\n",
+       "      <td>950.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>1083</td>\n",
+       "      <td>Tamara Bird</td>\n",
+       "      <td>862.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>1149</td>\n",
+       "      <td>Erika Carter</td>\n",
+       "      <td>853.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>1106</td>\n",
+       "      <td>Travis Willis</td>\n",
+       "      <td>831.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>1128</td>\n",
+       "      <td>Holly Collins</td>\n",
+       "      <td>823.32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     customer_id    customer_name   sales\n",
+       "150         1150  Douglas Ramirez  950.70\n",
+       "83          1083      Tamara Bird  862.90\n",
+       "149         1149     Erika Carter  853.70\n",
+       "106         1106    Travis Willis  831.87\n",
+       "128         1128    Holly Collins  823.32"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Top 5 Customers based on total amount spent\n",
+    "top5_df=Faker_retrieved_df[['customer_id','customer_name','sales']].nlargest(5,'sales')\n",
+    "top5_df"
    ]
   }
  ],
